44
================

24/01/21 Try to prevent browser autofill on email addresses
22/01/21 Preview incoming forms in a new page on mobile #932
22/01/21 Indicate adoptable status in mobile interface #27
22/01/21 Show a returning column on foster/retailer book
21/01/21 Support importing of animal logs #524
21/01/21 Fix focus bugs in TinyMCE 5 #938
21/01/21 Move owner req euth to Death, enable for non-shelter
19/01/21 Never overwrite RabiesTag with a blank
19/01/21 Add DisplayXIf* fields for PetPlan/form overlays
19/01/21 Online forms: support multiple ANDed showIf rules
19/01/21 Online forms: Yes/No defaults to blank so user must choose
19/01/21 Fix mail merge recipient list to cope with NULL
14/01/21 Showif can reference checkbox groups as nameI (0 based)
14/01/21 Cope with malformed showif rules
08/01/21 Option to skip fosterer emails if no medical items due
07/01/21 Fix for custom from addresses not loading
05/01/21 Searching does not trigger dirty form handling #492
05/01/21 Consistent transition speeds (and a little faster)
04/01/21 Do not clear the not for adoption flag during reclaim
02/01/21 Mail merge option to get the email recipient list #732
02/01/21 Refactor messy old address auto completion #562
02/01/21 Option to restrict state entry to US 2 letter codes #562
02/01/21 Exclude TNRs from annual figures species intake
31/12/20 Phone number formatting for US/UK/AU #499
31/12/20 Shelter view site mode #948
21/12/20 Fix #892 - bad disabled parameter to button
17/12/20 Temporarily roll back #892 due to unexpected side effects
17/12/20 Use case insensitive sort when regenerating person flags
16/12/20 Make "regenerate person flags" actually check and regenerate
15/12/20 Fix serious performance bug when selecting media #892
15/12/20 Do not allow media links to be emailed #892
14/12/20 Allow rabies tag to be cleared, update on delete #323
13/12/20 Update bg translation and correct date format
13/12/20 Suppress nulls when outputting subtable values in documents