@@ -51,6 +51,7 @@ CACHE_PROTECT_METHODS = {
     "animal_view_adoptable_html": [],
     "checkout": [ "processor", "payref" ],
     "dbfs_image": [ "title" ],
+    "document_repository": [ "mediaid" ],
     "extra_image": [ "title" ],
     "media_image": [ "mediaid" ],
     "json_adoptable_animal": [ "animalid" ],
@@ -435,6 +436,9 @@ def handler(post, path, remoteip, referer, querystring):
         hotlink_protect("dbfs_image", referer)
         return set_cached_response(cache_key, account, "image/jpeg", 86400, 86400, asm3.utils.iif(title.startswith("/"),
             asm3.dbfs.get_string_filepath(dbo, title), asm3.dbfs.get_string(dbo, title)))
+
+    elif method =="document_repository":
+        return set_cached_response(cache_key, account, asm3.media.mime_type(asm3.dbfs.get_name_for_id(dbo, mediaid)), 86400, 86400, asm3.dbfs.get_string_id(dbo, mediaid))
 
     elif method =="extra_image":
         hotlink_protect("extra_image", referer)
